<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addressesAddapater"
            type="com.aplication.onlinepharmacy.adapters.AddressesAddapter" />

        <variable
            name="defaultPhoneNumber"
            type="String" />

        <variable
            name="subTotal"
            type="Integer" />

        <variable
            name="shipping"
            type="Integer" />

        <variable
            name="isThereAnyAddress"
            type="Boolean" />

        <import type="android.view.View" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.CheckOutActivity"
        >

    <ScrollView
        android:id="@+id/checkoutScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/PlaceOrderBtn"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="@dimen/marginOf16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="48dp"
        android:paddingTop="32dp"
        >


        <ImageView
            android:id="@+id/backImageBtn"
            android:layout_width="@dimen/backBtnSize"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/ic_back_18" />

        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:fontFamily="@font/raleway_medium_for_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            app:layout_constraintBottom_toBottomOf="@+id/backImageBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backImageBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deliverToTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/raleway_medium_for_number"
            android:text="@string/deliver_to"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@id/addNewAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backImageBtn" />


        <Button
            android:id="@+id/addNewAddress"
            android:layout_width="wrap_content"
            android:textSize="@dimen/paddingOf12dp"
            android:text="new address"
            android:drawableLeft="@drawable/ic_add_address_icon"
            android:textAllCaps="false"
            android:drawablePadding="4dp"
            android:textColor="@color/textColor"
            android:paddingHorizontal="@dimen/paddingOf12dp"
            android:background="@drawable/add_new_address_background"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="@id/deliverToTextView"
            app:layout_constraintBottom_toBottomOf="@id/deliverToTextView"
            app:layout_constraintRight_toRightOf="parent" />


        <ImageView
            android:id="@+id/noAddressFoundImageView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/ic_emptybox"
            app:layout_constraintTop_toBottomOf="@id/deliverToTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="@{isThereAnyAddress ? View.GONE : View.VISIBLE ,default = gone}"
            app:layout_constraintBottom_toTopOf="@id/phoneNumberLabel"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addressesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_max="256dp"
            app:layout_constraintHeight_min="128dp"
            android:visibility="@{isThereAnyAddress ? View.VISIBLE : View.INVISIBLE , default = visible}"
            android:adapter="@{addressesAddapater}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/address_item_container"
            android:layout_marginTop="@dimen/marginOf16dp"
            app:layout_constraintDimensionRatio="10:5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deliverToTextView" />


        <TextView
            android:id="@+id/phoneNumberLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/raleway_medium_for_number"
            android:text="@string/phone_number_text"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressesRecyclerView" />


        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginOf16dp"
            android:background="@drawable/search_drugs_edit_text_background"
            android:drawableStart="@drawable/phone_icon_selector"
            android:drawablePadding="@dimen/paddingOf12dp"
            android:hint="@string/enter_your_phone_number"
            android:paddingVertical="12dp"
            android:layout_marginLeft="4dp"
            android:inputType="phone"
            android:paddingLeft="@dimen/marginOf16dp"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberLabel" />


        <TextView
            android:id="@+id/paymentMethodLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/raleway_medium_for_number"
            android:text="@string/payement_method"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberEditText" />

        <RadioGroup
            android:paddingLeft="@dimen/paddingOf8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/paymentMethodsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/paymentMethodLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium_for_number"
                android:text="Cash Payement"
                android:textSize="@dimen/paddingOf12dp"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Payment with card"
                android:textSize="@dimen/paddingOf12dp"
                android:textColor="@color/textColor"
                android:fontFamily="@font/raleway_medium_for_number"
                android:textStyle="bold" />

        </RadioGroup>


        <RelativeLayout
            android:id="@+id/relativeLayout1"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sub_total_text"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paymentMethodsLinearLayout">

            <TextView
                android:id="@+id/subTotalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/raleway_medium_for_number"
                android:text="@string/sub_total_text"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/subTotalValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:fontFamily="@font/raleway_medium_for_number"
                android:text="@{subTotal.toString( )  + ` Da`}"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </RelativeLayout>


        <RelativeLayout

            android:id="@+id/relativeLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sub_total_text"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relativeLayout1">

            <TextView
                android:id="@+id/shippingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/raleway_medium_for_number"
                android:text="@string/shicppingtext"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/shippingTextValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:fontFamily="@font/raleway_medium_for_number"
                android:text="@{shipping.toString( )  + ` Da`}"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </RelativeLayout>

        <View
            android:id="@+id/dashLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/dash_line_of_1dp"
            android:layout_marginTop="@dimen/paddingOf12dp"
            app:layout_constraintTop_toBottomOf="@id/relativeLayout2" />


        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sub_total_text"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dashLine">

            <TextView
                android:id="@+id/totalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/raleway_medium_for_number"
                android:text="@string/totaltext"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/totalTextValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:fontFamily="@font/raleway_medium_for_number"
                android:text="@{(subTotal + shipping) + ` Da`}"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </RelativeLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/PlaceOrderBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_order"
        android:background="@drawable/add_to_cart_from_screen_details_background"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="17sp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="@dimen/paddingOf8dp"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:drawableRight="@drawable/ic_checkout"
        android:paddingHorizontal="@dimen/marginOf16dp"
        android:textAllCaps="false"
        android:textColor="@color/vistaWhiteColor"
        android:fontFamily="@font/raleway_medium_for_number"
        android:gravity="center" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </layout>